--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "helx-analytics",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "1.0.2",
+  "description": "Proof of concept for HeLx analytics collection.",
+  "main": "lib/index.js",
   "scripts": {
-    "build": "./node_modules/.bin/babel --extensions .ts src --out-dir lib && npx tsc",
+    "build": "rm -rf lib && ./node_modules/.bin/babel --extensions .ts src --out-dir lib && npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Griffin Roupe",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
     "react": "^17.0.2",
     "react-ga": "^3.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-decorators": "^7.15.4",
     "@babel/preset-typescript": "^7.15.0",
     "@types/react": "^17.0.27",
     "typescript": "^4.4.3"
