--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "rootDir": "src",
       "declarationMap": true,
       "declaration": true,
-      "emitDeclarationOnly": true
+      "emitDeclarationOnly": true,
+      "experimentalDecorators": true
     }
   }
