--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@types/mixpanel-browser": "^2.35.7",
+    "mixpanel-browser": "^2.41.0",
     "react": "^17.0.2",
     "react-ga": "^3.3.0"
   },
