--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "helx-analytics",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "Proof of concept for HeLx analytics collection.",
   "main": "lib/index.js",
   "scripts": {
     "build": "rm -rf lib && ./node_modules/.bin/babel --extensions .ts src --out-dir lib && npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/frostyfan109/helx-analytics-poc.git"
   },
   "author": "Griffin Roupe",
   "license": "ISC",
