--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "helx-analytics",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "Proof of concept for HeLx analytics collection.",
   "main": "lib/index.js",
   "scripts": {
     "build": "rm -rf lib && ./node_modules/.bin/babel --extensions .ts src --out-dir lib && npx tsc",
+    "doc": "npx typedoc src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,6 +27,7 @@
     "@babel/plugin-proposal-decorators": "^7.15.4",
     "@babel/preset-typescript": "^7.15.0",
     "@types/react": "^17.0.27",
+    "typedoc": "^0.22.7",
     "typescript": "^4.4.3"
   }
 }
