--- a/babel.config.json
+++ b/babel.config.json
@@ -1,5 +1,8 @@
 {
-    "presets": ["@babel/preset-typescript"],
+    "presets": [
+        ["@babel/preset-env", {"targets": {"node": "current"}}],
+        "@babel/preset-typescript"
+    ],
     "plugins": [
         ["@babel/plugin-proposal-decorators", { "legacy": true }],
         ["@babel/plugin-proposal-class-properties", { "loose" : true }]
