--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "helx-analytics",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "Proof of concept for HeLx analytics collection.",
   "main": "lib/index.js",
   "scripts": {
@@ -25,8 +25,10 @@
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.5",
     "@babel/plugin-proposal-decorators": "^7.15.4",
+    "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.15.0",
     "@types/react": "^17.0.27",
+    "babel-preset-env": "^1.7.0",
     "typedoc": "^0.22.7",
     "typescript": "^4.4.3"
   }
