--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "helx-analytics",
-  "version": "1.0.12",
+  "version": "1.0.14",
   "description": "Proof of concept for HeLx analytics collection.",
   "main": "lib/index.js",
   "scripts": {
-    "build": "rm -rf lib && ./node_modules/.bin/babel --extensions .ts src --out-dir lib && npx tsc",
+    "prepublish": "npm run clean && npm run build && npm run doc",
+    "clean": "rm -rf ./lib",
+    "build": "npm run clean && ./node_modules/.bin/babel --extensions .ts src --out-dir lib && npx tsc",
     "doc": "npx typedoc src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
